--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 env:
   applicationfolder: spring-boot-hello-world-example
   AWS_REGION: us-east-1
-  S3BUCKET: [Replace S3 bucket name]
+  S3BUCKET: [codedeploystack-webappdeploymentbucket-ggwd19f7h9qh]
 
 
 jobs:
@@ -24,7 +24,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.CODEDEPLOY_IAMROLE }}
           role-session-name: GitHub-Action-Role
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ env.us-east-1 }}
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
