--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
       with:
         role-to-assume: ${{ secrets.CODEDEPLOY_IAMROLE }}
         role-session-name: GitHub-Action-Role
-        aws-region: ${{ env.AWS_REGION }}
+        aws-region: ${{ env.us-east-1 }}
     - run: |
         echo "Deploying branch ${{ env.GITHUB_REF }} to ${{ github.event.inputs.environment }}"
         commit_hash=`git rev-parse HEAD`
