--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,6 @@ env:
   AWS_REGION: us-east-1
   S3BUCKET: codedeploystack-webappdeploymentbucket-ggwd19f7h9qh
 
-
 jobs:
   build:
     name: Build and Package
@@ -24,7 +23,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.CODEDEPLOY_IAMROLE }}
           role-session-name: GitHub-Action-Role
-          aws-region: ${{ env.us-east-1 }}
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
@@ -52,12 +51,14 @@ jobs:
       contents: read
     steps:
     - uses: actions/checkout@v2
+
     - uses: aws-actions/configure-aws-credentials@master
       with:
         role-to-assume: ${{ secrets.CODEDEPLOY_IAMROLE }}
         role-session-name: GitHub-Action-Role
-        aws-region: ${{ env.us-east-1 }}
+        aws-region: ${{ env.AWS_REGION }}
+
     - run: |
-        echo "Deploying branch ${{ env.GITHUB_REF }} to ${{ github.event.inputs.environment }}"
-        commit_hash=`git rev-parse HEAD`
+        echo "Deploying branch ${{ github.ref }} to Dev environment"
+        commit_hash=$(git rev-parse HEAD)
         aws deploy create-deployment --application-name CodeDeployAppNameWithASG --deployment-group-name CodeDeployGroupName --github-location repository=[replace github repo name],commitId=$commit_hash --ignore-application-stop-failures
