Fixed missing aws-region in configure-aws-credentials step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,11 +19,12 @@ jobs:
       - uses: actions/checkout@v2
         name: Checkout Repository
 
-      - uses: aws-actions/configure-aws-credentials@master
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: ${{ secrets.CODEDEPLOY_IAMROLE }}
           role-session-name: GitHub-Action-Role
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: us-east-1   # Explicitly passing the AWS region
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
@@ -50,15 +51,16 @@ jobs:
       id-token: write
       contents: read
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - uses: aws-actions/configure-aws-credentials@master
-      with:
-        role-to-assume: ${{ secrets.CODEDEPLOY_IAMROLE }}
-        role-session-name: GitHub-Action-Role
-        aws-region: ${{ env.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.CODEDEPLOY_IAMROLE }}
+          role-session-name: GitHub-Action-Role
+          aws-region: us-east-1   # Explicitly passing the AWS region
 
-    - run: |
-        echo "Deploying branch ${{ github.ref }} to Dev environment"
-        commit_hash=$(git rev-parse HEAD)
-        aws deploy create-deployment --application-name CodeDeployAppNameWithASG --deployment-group-name CodeDeployGroupName --github-location repository=[replace github repo name],commitId=$commit_hash --ignore-application-stop-failures
+      - run: |
+          echo "Deploying branch ${{ github.ref }} to Dev environment"
+          commit_hash=$(git rev-parse HEAD)
+          aws deploy create-deployment --application-name CodeDeployAppNameWithASG --deployment-group-name CodeDeployGroupName --github-location repository=[replace github repo name],commitId=$commit_hash --ignore-application-stop-failures
