--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,9 @@ env:
   AWS_REGION: us-east-1
   S3BUCKET: codedeploystack-webappdeploymentbucket-ggwd19f7h9qh
 
+env:
+  AWS_REGION: us-east-1
+
 jobs:
   build:
     name: Build and Package
